feat: 调整目录结构

--- a/src/containers/WorkBench/style.css
+++ b/src/containers/WorkBench/style.css
@@ -1,2 +1,14 @@
-.WorkBench {
-  display: flex; }
+.layout {
+  min-width: 800px;
+  background: #fefefe; }
+  .layout .header {
+    vertical-align: middle;
+    display: inline-block;
+    width: 100%; }
+    .layout .header .header__settings {
+      float: right; }
+  .layout .ant-layout-header {
+    padding: 0 5%; }
+  .layout .ant-layout-content {
+    width: 90%;
+    margin: 0 auto; }
