--- a/src/components/LoginForm/style.css
+++ b/src/components/LoginForm/style.css
@@ -1,18 +1,17 @@
-.LoginForm {
-  display: flex; }
-  .LoginForm .form-content-left {
-    width: 55vw;
-    color: #46A1ED; }
-  .LoginForm .form-content-right {
-    width: 43vw;
-    padding-right: 2vw; }
-    .LoginForm .form-content-right #vcode {
-      width: 21vw; }
-  .LoginForm .login {
-    width: 20vw; }
-  .LoginForm .register {
-    width: 20vw;
-    margin-left: 1vw; }
-  .LoginForm .forgetPwd {
-    float: right;
-    margin-top: 1vh; }
+.login-form {
+  display: flex;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); }
+  .login-form .fcontent__right {
+    width: 300px;
+    max-width: 100%; }
+    .login-form .fcontent__right .fcright__title h1 {
+      text-align: center;
+      margin-bottom: 50px;
+      color: #fff; }
+    .login-form .fcontent__right .fcright__btn {
+      width: 45%; }
+    .login-form .fcontent__right .fcright__register {
+      margin-left: 10%; }
