--- a/src/components/RegisterForm/style.css
+++ b/src/components/RegisterForm/style.css
@@ -1,8 +1,16 @@
-.RegisterForm {
-  width: 70%; }
-  .RegisterForm .login-x {
-    width: 10%;
-    margin-left: 20%; }
-  .RegisterForm .register-x {
-    width: 10%;
-    margin-left: 40%; }
+.regitser-form {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); }
+  .regitser-form .rform__content {
+    width: 300px;
+    max-width: 100%; }
+    .regitser-form .rform__content .rfcontent__title h1 {
+      text-align: center;
+      margin-bottom: 50px;
+      color: #fff; }
+    .regitser-form .rform__content .rfcontent__btn {
+      width: 45%; }
+    .regitser-form .rform__content .rfcontent__back {
+      margin-left: 10%; }
