feat: 添加部分表单

--- a/src/config/style.scss
+++ b/src/config/style.scss
@@ -1,3 +1,15 @@
 $theme-color: #46a1ed;
 
+$bright: #ffca00; // 亮色，与主色调的对比色，黄
+$blue: #029dd9; //蓝色
+$red: #fe0201; //红色 新提示，未处理，表示错误
+$black: #323232; //黑色
 $white: #fff;
+
+$gray: #797d7f; // 灰色 内容，次要信息
+$smoke: #f4f4f4; // 烟色 灰色背景 不可点击区域背景色
+$smoke-dark: #f1f1f1; // 深烟色 表单分割线
+
+$black: #303233; // 黑色 页面默认色 页面标题，一级标题
+
+$yellow: #ffe800;
