feat: 调整 verify data 页面

--- a/src/custom.css
+++ b/src/custom.css
@@ -21,3 +21,15 @@ body {
     min-width: 180px; }
   .query-form .query-form-btn {
     float: right; }
+
+.ml10 {
+  margin-left: 20px; }
+
+.ml20 {
+  margin-left: 20px; }
+
+.ml30 {
+  margin-left: 20px; }
+
+.ml40 {
+  margin-left: 20px; }
