--- a/src/custom.scss
+++ b/src/custom.scss
@@ -26,8 +26,23 @@ body {
   .query-form-select {
     min-width: 180px;
   }
-
   .query-form-btn {
     float: right;
   }
+}
+
+.ml10 {
+  margin-left: 20px;
+}
+
+.ml20 {
+  margin-left: 20px;
+}
+
+.ml30 {
+  margin-left: 20px;
+}
+
+.ml40 {
+  margin-left: 20px;
 }
