--- a/src/custom.scss
+++ b/src/custom.scss
@@ -31,6 +31,28 @@ body {
   }
 }
 
+.common-dl {
+  display: table;
+  & > div {
+    display: table-row;
+  }
+  dt {
+    display: table-cell;
+    padding-top: 5px;
+    padding-right: 5px;
+  }
+  dd {
+    display: table-cell;
+  }
+}
+
+.block-browser-item {
+  color: rgba(0, 0, 0, 0.65);
+  &:hover {
+    color: $theme-color;
+  }
+}
+
 .ml10 {
   margin-left: 20px;
 }
