--- a/src/custom.css
+++ b/src/custom.css
@@ -49,3 +49,15 @@ body {
 
 .ml40 {
   margin-left: 20px; }
+
+.mt10 {
+  margin-top: 20px; }
+
+.mt20 {
+  margin-top: 20px; }
+
+.mt30 {
+  margin-top: 20px; }
+
+.mt40 {
+  margin-top: 20px; }
