--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,6 +1,5 @@
 @import './config/style.scss';
 @import './icons/iconfont.css';
-
 html,
 body {
   overflow-x: hidden;
@@ -11,6 +10,7 @@ body {
   width: 100vw;
   z-index: 2;
 }
+
 .content {
   margin-top: 64px;
 }
@@ -22,7 +22,6 @@ body {
 .query-form {
   border: 1px solid $gray;
   padding: 8px 10px;
-
   .query-form-select {
     min-width: 180px;
   }
@@ -33,7 +32,7 @@ body {
 
 .common-dl {
   display: table;
-  & > div {
+  &>div {
     display: table-row;
   }
   dt {
@@ -67,4 +66,20 @@ body {
 
 .ml40 {
   margin-left: 20px;
+}
+
+.mt10 {
+  margin-top: 20px;
+}
+
+.mt20 {
+  margin-top: 20px;
+}
+
+.mt30 {
+  margin-top: 20px;
+}
+
+.mt40 {
+  margin-top: 20px;
 }
