--- a/src/containers/WorkBench/D2D/Dashboard/style.css
+++ b/src/containers/WorkBench/D2D/Dashboard/style.css
@@ -1,8 +1,2 @@
-.CorpAccount {
-  width: 70%; }
-  .CorpAccount .login-x {
-    width: 10%;
-    margin-left: 20%; }
-  .CorpAccount .register-x {
-    width: 10%;
-    margin-left: 40%; }
+.dashboard .dashboard__card {
+  min-height: 230px; }
