--- a/src/containers/WorkBench/D2D/Dashboard/style.scss
+++ b/src/containers/WorkBench/D2D/Dashboard/style.scss
@@ -1,15 +1,5 @@
-.CorpAccount {
-    width: 70%;
-
-    @mixin form-button {
-        width: 10%;
-    }
-    .login-x {
-        @include form-button
-        margin-left: 20%;
-    }
-    .register-x {
-        @include form-button
-        margin-left: 40%;
+.dashboard {
+    .dashboard__card {
+        min-height: 230px;
     }
 }
