fix: 应要求进行调整

--- a/src/components/HomeLayout/index.css
+++ b/src/components/HomeLayout/index.css
@@ -1,8 +1,16 @@
+.home-layout .home-layout-logo {
+  display: inline-block; }
+
+.home-layout .hlayout__img {
+  height: 40px;
+  vertical-align: middle; }
+
 .home-layout .hlayout__logo {
   padding: 10px 20px;
   color: #fff;
   background-color: #46a1ed;
-  border-radius: 5px; }
+  border-radius: 5px;
+  vertical-align: middle; }
 
 .home-layout .hlayout__search {
   float: right; }
