--- a/src/components/HomeLayout/index.scss
+++ b/src/components/HomeLayout/index.scss
@@ -1,11 +1,20 @@
 @import 'src/config/style.scss';
 
 .home-layout {
+  .home-layout-logo {
+    display: inline-block;
+  }
+  .hlayout__img {
+    height: 40px;
+    vertical-align: middle;
+  }
+
   .hlayout__logo {
     padding: 10px 20px;
     color: $white;
     background-color: $theme-color;
     border-radius: 5px;
+    vertical-align: middle;
   }
 
   .hlayout__search {
