--- a/src/containers/Home/index.scss
+++ b/src/containers/Home/index.scss
@@ -5,14 +5,22 @@
   padding-bottom: 30px;
 
   .home__container:not(:first-child) {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 20px 10px;
+    border-bottom: 1px solid $gray;
+    box-shadow: 2px 2px 5px $gray;
   }
 
   .home__cards {
     .hcards__card {
       background-color: $white;
       padding: 10px 30px;
+
+      &:hover {
+        box-shadow: 1px 1px 5px $gray;
+      }
+
       .iconfont {
         font-size: 50px;
       }
@@ -29,6 +37,13 @@
         font-size: 28px;
         font-weight: bold;
       }
+    }
+  }
+
+  .common-dl {
+    .common-dl-row {
+      line-height: 40px;
+      height: 40px;
     }
   }
 }
