--- a/src/containers/Home/index.css
+++ b/src/containers/Home/index.css
@@ -22,6 +22,23 @@
     .home .home__cards .hcards__card .hccard__count {
       font-size: 28px;
       font-weight: bold; }
-  .home .common-dl .common-dl-row {
-    line-height: 40px;
-    height: 40px; }
+  .home .horizontal-table-container {
+    border-radius: 5px; }
+  .home .horizontal-table {
+    min-width: 800px;
+    border: 1px solid #e8e8e8; }
+    .home .horizontal-table .horizontal-table-tr {
+      border-bottom: 1px solid #e8e8e8;
+      line-height: 54px;
+      height: 54px; }
+      .home .horizontal-table .horizontal-table-tr:hover {
+        background-color: #e6f7ff; }
+    .home .horizontal-table .horizontal-table-td-1 {
+      min-width: 30%;
+      padding-left: 20px;
+      background-color: #fafafa;
+      font-weight: bold;
+      color: rgba(0, 0, 0, 0.85);
+      border-right: 1px solid #e8e8e8; }
+    .home .horizontal-table .horizontal-table-td-2 {
+      padding-left: 20px; }
