--- a/src/containers/Home/index.scss
+++ b/src/containers/Home/index.scss
@@ -39,10 +39,32 @@
     }
   }
 
-  .common-dl {
-    .common-dl-row {
-      line-height: 40px;
-      height: 40px;
+  .horizontal-table-container {
+    border-radius: 5px;
+  }
+  .horizontal-table {
+    min-width: 800px;
+    border: 1px solid #e8e8e8;
+    .horizontal-table-tr {
+      border-bottom: 1px solid #e8e8e8;
+      line-height: 54px;
+      height: 54px;
+      &:hover {
+        background-color: #e6f7ff;
+      }
+    }
+
+    .horizontal-table-td-1 {
+      min-width: 30%;
+      padding-left: 20px;
+      background-color: #fafafa;
+      font-weight: bold;
+      color: rgba(0, 0, 0, 0.85);
+      border-right: 1px solid #e8e8e8;
+    }
+
+    .horizontal-table-td-2 {
+      padding-left: 20px;
     }
   }
 }
