--- a/src/components/HomeLayout/index.css
+++ b/src/components/HomeLayout/index.css
@@ -1,8 +1,9 @@
 .home-layout .home-layout-logo {
-  display: inline-block; }
+  display: inline-block;
+  cursor: pointer; }
 
 .home-layout .hlayout__img {
-  height: 40px;
+  height: 50px;
   vertical-align: middle; }
 
 .home-layout .hlayout__logo {
