--- a/src/components/HomeLayout/index.scss
+++ b/src/components/HomeLayout/index.scss
@@ -3,9 +3,10 @@
 .home-layout {
   .home-layout-logo {
     display: inline-block;
+    cursor: pointer;
   }
   .hlayout__img {
-    height: 40px;
+    height: 50px;
     vertical-align: middle;
   }
 
