--- a/src/containers/WorkBench/style.scss
+++ b/src/containers/WorkBench/style.scss
@@ -13,9 +13,10 @@
     }
   }
   .wlayout__logo {
+    cursor: pointer;
     float: left;
     .wllogo__img {
-      height: 40px;
+      height: 50px;
       vertical-align: middle;
     }
     .wllogo__name {
@@ -67,6 +68,13 @@
         margin-top: 20px;
         margin-bottom: 0;
       }
+    }
+  }
+
+  .ant-layout-sider-collapsed {
+    .tech-support {
+      visibility: hidden;
+      transition: 0.1s ease all;
     }
   }
 }
