--- a/src/components/HomeLayout/index.css
+++ b/src/components/HomeLayout/index.css
@@ -21,3 +21,7 @@
 
 .home-layout .home-layout-footer {
   padding: 10px; }
+
+.home-layout .tech-support {
+  font-weight: bold;
+  color: #797d7f; }
