--- a/src/components/HomeLayout/index.scss
+++ b/src/components/HomeLayout/index.scss
@@ -31,7 +31,12 @@
   }
 
   .tech-support {
+    transition: 0.1s ease all;
     font-weight: bold;
-    color: $gray;
+    text-align: center;
+    margin-top: 60px;
+    .tech {
+      color: #337ab7;
+    }
   }
 }
