--- a/src/containers/WorkBench/style.scss
+++ b/src/containers/WorkBench/style.scss
@@ -74,7 +74,11 @@
   .tech-support {
     transition: 0.1s ease all;
     font-weight: bold;
-    color: $gray;
+    text-align: center;
+    margin-top: 60px;
+    .tech {
+      color: #337ab7;
+    }
   }
 
   .ant-layout-sider-collapsed {
