feat: 应需求做出调整

--- a/src/containers/WorkBench/D2D/Dashboard/style.scss
+++ b/src/containers/WorkBench/D2D/Dashboard/style.scss
@@ -23,6 +23,11 @@
     border: 1px solid $gray;
     padding: 10px 20px;
     box-shadow: 2px 2px 10px $gray;
+
+    .dlcarousel__item {
+      padding-bottom: 10px;
+    }
+
     ul {
       padding: 0;
     }
@@ -30,4 +35,12 @@
       list-style: none;
     }
   }
+}
+
+.ant-carousel .slick-dots li button {
+  background: $black;
+}
+
+.ant-carousel .slick-dots li.slick-active button {
+  background: $gray;
 }
