--- a/src/containers/WorkBench/D2D/Dashboard/style.css
+++ b/src/containers/WorkBench/D2D/Dashboard/style.css
@@ -13,7 +13,15 @@
   border: 1px solid #797d7f;
   padding: 10px 20px;
   box-shadow: 2px 2px 10px #797d7f; }
+  .dashboard .dashboard-list .dlcarousel__item {
+    padding-bottom: 10px; }
   .dashboard .dashboard-list ul {
     padding: 0; }
   .dashboard .dashboard-list ul > li {
     list-style: none; }
+
+.ant-carousel .slick-dots li button {
+  background: #303233; }
+
+.ant-carousel .slick-dots li.slick-active button {
+  background: #797d7f; }
